--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@reduxjs/toolkit": "^2.6.1",
+    "@tailwindcss/vite": "^4.1.11",
     "@tinymce/tinymce-react": "^6.0.0",
     "axios": "^1.8.3",
     "backend": "file:..",
