--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 MONGO_URI=mongodb+srv://darkspace123098:$Dark_space*123098@cluster0.rpyvmbw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=8000
-
+SECRET_KEY=ad912eb1
 CLOUD_NAME=df54gzza2
 API_KEY=594292439131516
 API_SECRET=pnJoyVnLwhpdCrTCqSSRXmi18Yo
